In Class Updates to CartedProduct

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -95,11 +95,15 @@ nav li {
   background-color: #E0E0E0;
 }
 
-#show-text h5{
+h5{
   text-align: right;
 }
 
-#show-text h4{
+h4{
+  color: #A23943;
+}
+
+h6 {
   color: #286090;
 }
 
