--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
             <!-- CATEGORY / FILTER DROP DOWN MENU -->
 
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">filter</a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-sort-by-attributes" aria-hidden="true"></a>
               <ul class="dropdown-menu">
 
               <% Category.all.each do |category|%>
@@ -41,7 +41,7 @@
             </li>
 
           <% if current_user %>
-            <li><a href="/products/new">new</a></li>
+            <li><a href="/products/new"><span class="glyphicon glyphicon-plus" aria-hidden="true"></a></li>
             <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></a></li>
           <% end %>
 
