In Class Edits to Cart Count and sad path Validations

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2,6 +2,7 @@ body {
   font-family: Geneva,Tahoma,Verdana,sans-serif;
   background-image: url("swirl_pattern.png");
   background-color: black;
+  background-attachment: fixed;
   margin-top: 0px;
 }
 
