--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,3 +1,15 @@
+<% if @product.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+ 
+    <ul>
+    <% @product.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <div class="container">
 
   <h2>Add a new product to the store</h2>
@@ -8,12 +20,12 @@
 
     <div class="input-group">
       <%=label_tag :name %>
-      <%=text_field_tag :name, nil, class: "form-control" %>
+      <%=text_field_tag :name, @product.name, class: "form-control" %>
     </div>
 
     <div class="input-group">
       <%=label_tag :price %>
-      <%=text_field_tag :price, nil, class: "form-control" %>
+      <%=text_field_tag :price, @product.price, class: "form-control" %>
     </div>
 
     <div class="input-group">
@@ -23,7 +35,12 @@
 
     <div class="input-group">
       <%=label_tag :description %>
-      <%=text_field_tag :description, nil, class: "form-control" %>
+      <%=text_field_tag :description, @product.description, class: "form-control" %>
+    </div>
+
+    <div class="input-group">
+      <%=label_tag :image %>
+      <%=text_field_tag :image, "http://shmector.com/preview/nature/cartoon-planet-vector_250x250.png", class: "form-control" %>
     </div>
 
     <div>
